--- a/Video 1/index.html
+++ b/Video 1/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>HTML Introduction</title>
 </head>
 <body>
-  <h1>hello</h1>
-  
+  <h1>Hello HTML</h1>
 </body>
 </html>
