--- a/Video 3/index.html
+++ b/Video 3/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  content
+  content of the website
 
   <script src="script.js"></script>
 </body>
