--- a/Video 5/index.html
+++ b/Video 5/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Images</title>
+  <title>Image, Lists and Tables in HTML</title>
   <link rel="stylesheet" href="style.css">
   </link>
 </head>
 
 <body>
-  <img src="train.png" alt="Train Image" height="200px">
+  <img src="train.png" alt="Train Image" height="230">
   <br>
   <table>
     <caption>Employee Details</caption>
