--- a/Video 6/index.html
+++ b/Video 6/index.html
@@ -4,10 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="this is a page which contains description about harry - the sigma">
-  <title>About Harry - CodeWithHarry</title>
+  <title>SEO - Web Vitals </title>
 </head>
 <body>
-  <h1>Harry</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, vel dolorum facilis voluptas in cupiditate impedit asperiores atque nihil natus maiores, cumque deserunt odit, quod exercitationem deleniti illo esse inventore nisi excepturi dicta temporibus?</p>
+  <h1>SEO(Search Engine Optimization)</h1>
+  <p>
+    <ol>
+      <li>Keyword Research and Optimization: Identify relevant keywords and incorporate them naturally into your content, titles, and meta descriptions.</li>
+      <li>Quality Content: Create valuable, informative, and engaging content that meets user intent and encourages longer site visits.</li>
+      <li>Title Tags: Craft unique, descriptive, and keyword-rich titles for each page, adhering to a character limit (typically under 60 characters).</li>
+      <li>Meta Descriptions: Write compelling meta descriptions that summarize your content and include target keywords, staying within 150-160 characters.</li>
+      <li>Heading Tags: Use heading tags (H1, H2, H3, etc.) to structure your content and include keywords to improve readability and SEO.</li>
+      <li>Alt Attributes for Images: Add descriptive alt attributes to images, including relevant keywords to help search engines understand the image content.</li>
+      <li>SEO-friendly URLs: Create clean, descriptive URLs that include primary keywords and use hyphens to separate words.</li>
+      <li>Internal Linking: Link to other relevant pages within your website to enhance navigation and help search engines crawl your site.</li>
+      <li>Mobile Optimization: Ensure your website is mobile-friendly with responsive design, as mobile usability is a significant ranking factor.</li>
+      <li>Page Speed: Optimize your website's loading speed by compressing images, leveraging browser caching, and minimizing CSS and JavaScript to improve user experience and search rankings.</li>
+    </ol>
+  </p>
+  <p>
+    <h1>Web Vitals</h1>
+    <ol>
+      <li>Largest Contentful Paint (LCP):</li>
+      <ul>
+        <li>Measures: Loading performance.</li>
+        <li>Goal: LCP should occur within 2.5 seconds of when the page starts loading.</li>
+      </ul>
+      <li>First Input Delay (FID):</li>
+      <ul>
+        <li>Measures: Interactivity.</li>
+        <li>Goal: FID should be less than 100 milliseconds.</li>
+      </ul>
+      <li>Cumulative Layout Shift (CLS)::</li>
+      <ul>
+        <li>Measures: Visual stability.</li>
+        <li>Goal: CLS should be less than 0.1.</li>
+      </ul>
+    </ol>
+  </p>
 </body>
 </html>
