Forms & Input Tags

--- a/Video 7/index.html
+++ b/Video 7/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Forms - Lets Learn it</title>
+  <title>Forms - Lets Learn</title>
 </head>
 
 <body>
@@ -41,3 +41,20 @@
 </body>
 
 </html>
+
+<!--
+Form Tag (<form>):
+
+  action: URL to which the form data will be submitted.
+  method: HTTP method (GET or POST) used for submission.
+  Input Fields:
+  
+  type="text": Text input for the name.
+  type="email": Email input with validation for a proper email format.
+  textarea: Multi-line text input for a message.
+  Labels:
+  
+   <label> tags associate text with input elements for better accessibility.
+  Submit Button:
+  
+  <input type="submit">: Button to submit the form data. -->
