Inline & Block Elements

--- a/Video 8/index.html
+++ b/Video 8/index.html
@@ -7,14 +7,36 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Hey I am a para</p>
-    <a href="https://google.com">Google</a>
+  <p>Hey I am para & block element</p>
+    <a href="https://google.com">Google: I am Inline element</a>
     <div> I am a block element</div>
     <span>I am span and I am inline</span>
     <a href="">yes he is inline</a>
 
-    <!-- Quick Quiz:
-    Without using br tag, write a vertically aligned form asking for name, city and pincode of a user.
-    Everyone must comment -->
+<!-- Inline Elements
+
+Definition: Inline elements do not start on a new line. They occupy only the width required by their content.
+
+Examples: <span>, <a>, <img>, <strong>, <em>
+
+<p>This is an <span>inline</span> element.</p>
+<a href="#">This is a link</a>
+
+Block Elements
+
+Definition: Block elements start on a new line and take up the full width available (stretches out to the left and right as far as it can).
+
+Examples: <div>, <p>, <h1> to <h6>, <ul>, <li>, <section>
+
+<div>This is a block element.</div>
+<p>This is a paragraph, which is also a block element.</p>
+
+Key Differences:
+
+1. Layout: Inline elements flow with the text, while block elements start on a new line.
+
+2. Width: Inline elements take up only as much width as necessary, while block elements take up the full width of their container.
+
+3. Containment: Block elements can contain other block elements or inline elements, while inline elements generally only contain text or other inline elements. -->
 </body>
 </html>
