Video, Audio & Media

--- a/Video 10/index.html
+++ b/Video 10/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Video, Audio & Media</title>
 </head>
 <body>
-    <video src="video.mp4" height="255" controls loop muted poster="download.jpg"></video>
+    <video src="video.mp4" height="355" controls loop muted poster="download.jpg"></video>
 
     <audio src="Video 10_sachin.mp3" controls autoplay loop muted></audio>
 
@@ -24,3 +24,31 @@
     You can use YouTube videos in an iframe using YouTube's embedding feature -->
 </body>
 </html>
+
+<!-- Video in HTML:
+
+The <video> tag is used to embed video content in an HTML document. It supports multiple attributes and child elements for controlling playback, specifying sources, and more.
+
+Key Attributes:
+controls: Adds play, pause, and volume controls.
+
+autoplay: Video starts playing automatically.
+
+loop: Video will loop indefinitely.
+
+muted: Video starts muted.
+
+poster: URL of an image to show before the video starts.   
+
+Audio in HTML:
+
+The <audio> tag is used to embed audio content in an HTML document. It supports various attributes for controlling playback and specifying sources.
+    
+Key Attributes:
+controls: Adds play, pause, and volume controls.
+
+autoplay: Audio starts playing automatically.
+
+loop: Audio will loop indefinitely.
+
+muted: Audio starts muted.-->
