--- a/Video 11/index.html
+++ b/Video 11/index.html
@@ -28,3 +28,109 @@
     <!-- <img src="semantic-tags.png" alt=""> -->
 </body>
 </html>
+
+
+<!-- 
+Semantic Tags in HTML:
+Semantic tags in HTML provide meaning to the web page content, helping both developers and browsers understand the structure and purpose of the content. Here are some of the key semantic tags:
+
+1. <header>
+
+Represents introductory content or a group of navigational links.
+
+Typically contains headings, logos, and other introductory elements.
+
+<header>
+    <h1>Website Title</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
+
+2. <nav>
+
+Represents a section of a page intended for navigation.
+
+Contains links to other pages or sections within the same page.
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+</nav>
+
+3. <main>
+
+Represents the main content of the document.
+
+Only one <main> element per document.
+
+<main>
+    <h2>Main Content</h2>
+    <p>This is the main content of the page.</p>
+</main>
+
+4. <article>
+
+Represents a self-contained piece of content that can be independently distributed.
+
+Useful for blog posts, news articles, etc.
+
+<article>
+    <h2>Article Title</h2>
+    <p>This is an article.</p>
+</article>
+
+5. <section>
+
+Represents a thematic grouping of content, typically with a heading.
+
+Useful for dividing content into sections.
+
+<section>
+    <h2>Section Title</h2>
+    <p>This is a section.</p>
+</section>
+
+6. <aside>
+
+Represents content tangentially related to the content around it.
+
+Often used for sidebars, pull quotes, etc.
+
+<aside>
+    <h2>Related Content</h2>
+    <p>This is an aside.</p>
+</aside>
+
+7. <footer>
+
+Represents the footer of a document or section.
+
+Typically contains information about the author, copyright information, links to related documents, etc.
+
+<footer>
+    <p>&copy; 2024 Your Company. All rights reserved.</p>
+</footer>
+
+8. <figure> and <figcaption>
+
+<figure>: Represents self-contained content, often with an optional caption.
+
+<figcaption>: Provides a caption or legend for the <figure> element.
+
+<figure>
+    <img src="image.jpg" alt="Description of the image">
+    <figcaption>Caption for the image.</figcaption>
+</figure>
+
+Benefits of Using Semantic Tags:
+
+Improved Accessibility: Screen readers and other assistive technologies can better understand and navigate the content.
+
+Better SEO: Search engines can more accurately index and rank content.
+
+Easier Maintenance: Code is more readable and maintainable for developers. -->
