Entities and Code Tag

--- a/Video 13/index.html
+++ b/Video 13/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entities, code Tag</title>
 </head>
 <body>
     3>4
@@ -37,3 +37,19 @@
   </code></pre>
 </body>
 </html>
+
+
+<!-- HTML Entities:
+
+HTML entities are used to represent characters that have special meanings in HTML or are not easily typed on a keyboard. They start with an ampersand (&) and end with a semicolon (;).
+
+Common HTML Entities:
+
+1. Non-breaking Space: &nbsp; ( )
+2. Less Than: &lt; (<)
+3. Greater Than: &gt; (>)
+4. Ampersand: &amp; (&)
+5. Double Quote: &quot; (")
+6. Single Quote: &apos; (')
+7. <code> Tag:
+The <code> tag is used to define a piece of computer code. It typically displays text in a monospaced font, which makes it easier to distinguish code from regular text. -->
